--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -15,6 +15,7 @@
   </div>
   <div class="todo_item">
    <p><%= todo_item.content %></p>
+   <p><%= image_tag todo_item.image_url.to_s %></p>
   </div>
   <div class="trash">
    <%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
