--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -2,6 +2,12 @@
 
 <h1>Todo Lists</h1>
 
+<% if @current_user.admin? %>
+  <h3>Welcome, Admin.</h3>
+<% else %>
+  <h3>Welcome to your ToDo Lists Page</h3>
+<% end %>
+
 <%= form_tag todo_lists_path, method: :get do %>
   <%= text_field_tag 'term', params[:term], placeholder: "Enter user's name or surname" %>
   <%= submit_tag 'Search' %>
